# zero2prod

./: .env  Brewfile  Cargo.toml  Dockerfile  configuration.yaml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  local  local.yaml  production  production.yaml
migrations/: 20230811025714_create_subscription_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: health_check.rs  subscriptions.rs
tests/: .env  health_check.rs
