[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[target.86x_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[dependencies]
actix-web = "4"

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
reqwest = "0.11 "
serde = { version = "1", features = ["derive"]}
config = "0.13"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
uuid = { version = "1", features = ["v4"] }

[dependencies.sqlx]
version = "0.6"
default-features = false 
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate"
]
